# requin

./: Cargo.toml  README.md  requirements.txt
.circleci/: config.yml
.github/workflows/: build.yml
src/: board.rs  evaluator.rs  game.rs  generator.rs  lib.rs  main.rs  move.rs  parser.rs  zobrist.rs
src/bitboard/: mod.rs  threats.rs
src/board/: board.rs  mod.rs  movements.rs
src/engine/: evaluator.rs  mod.rs  search.rs  tt.rs
src/uci/: client.rs  go_args.rs  handler.rs  mod.rs  output.rs  time.rs
tests/: engine_test.rs
