[package]
name = "requin"
version = "1.1.0"
authors = ["James Tan <james_tan97@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
num_enum = "0.5.5"
lazy_static = "1.4.0"
bitfield = "0.13.2"
regex = "1.5.4"
itertools = "0.10.3"
structopt = "0.3.26"
exitcode = "1.1.2"
threadpool = "1.8.1"
mockall_double = "0.1.0"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"

[dev-dependencies]
mockall = "0.8.0"
